--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.37.1",
     "dotenv": "^16.4.5",
     "expo-jwt": "^1.7.1",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.7"
   }
 }
