--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
-    "@types/react-modal": "^3.16.3"
+    "@types/react-modal": "^3.16.3",
+    "tailwindcss": "^3.4.7"
   }
 }
